virtual-machines/aks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aks-helloworld  # deployment metadata 
  namespace: hello-web-app-routing
spec:
  replicas: 1
  selector: # replica set that matches pod names
    matchLabels:
      app: aks-helloworld
  template: # Pod template
    metadata:
      labels:
        app: aks-helloworld
    spec:
      containers:
      - name: aks-helloworld
        image: mcr.microsoft.com/azuredocs/aks-helloworld:v1
        ports:
        - containerPort: 80
